scenarios/extras-manifest/expected/deployment-extras-manifest-dev-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        deployah.dev/environment-instance: dev
        deployah.dev/project: extras-manifest
        deployah.dev/source: spec
    labels:
        app.kubernetes.io/instance: extras-manifest-dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: web
        deployah.dev/component: web
        deployah.dev/environment: dev
        deployah.dev/instance: extras-manifest-dev
        deployah.dev/project: extras-manifest
        helm.sh/chart: web-0.1.0
    name: extras-manifest-dev-web
    namespace: default
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            app.kubernetes.io/instance: extras-manifest-dev
            app.kubernetes.io/name: web
    strategy:
        type: RollingUpdate
    template:
        metadata:
            annotations:
                deployah.dev/environment-instance: dev
            labels:
                app.kubernetes.io/instance: extras-manifest-dev
                app.kubernetes.io/managed-by: Helm
                app.kubernetes.io/name: web
                deployah.dev/component: web
                deployah.dev/environment: dev
                deployah.dev/instance: extras-manifest-dev
                deployah.dev/project: extras-manifest
                helm.sh/chart: web-0.1.0
        spec:
            affinity:
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        - podAffinityTerm:
                            labelSelector:
                                matchLabels:
                                    app.kubernetes.io/instance: extras-manifest-dev
                                    app.kubernetes.io/name: web
                            topologyKey: kubernetes.io/hostname
                          weight: 1
            containers:
                - image: docker.io/library/nginx:latest
                  imagePullPolicy: Always
                  livenessProbe:
                    failureThreshold: 6
                    periodSeconds: 10
                    tcpSocket:
                        port: http
                    timeoutSeconds: 3
                  name: web
                  ports:
                    - containerPort: 8080
                      name: http
                      protocol: TCP
                  readinessProbe:
                    failureThreshold: 3
                    periodSeconds: 5
                    tcpSocket:
                        port: http
                    timeoutSeconds: 3
                  resources:
                    limits: {}
                    requests:
                        cpu: 500m
                        ephemeral-storage: 50Mi
                        memory: 512Mi
                  startupProbe:
                    failureThreshold: 36
                    periodSeconds: 5
                    tcpSocket:
                        port: http
                    timeoutSeconds: 3
            restartPolicy: Always
            serviceAccountName: default
            terminationGracePeriodSeconds: 30
