scenarios/extras-manifest/expected/service-extras-manifest-dev-web.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        deployah.dev/environment-instance: dev
        deployah.dev/project: extras-manifest
        deployah.dev/source: spec
    labels:
        app.kubernetes.io/instance: extras-manifest-dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: web
        deployah.dev/component: web
        deployah.dev/environment: dev
        deployah.dev/instance: extras-manifest-dev
        deployah.dev/project: extras-manifest
        helm.sh/chart: web-0.1.0
    name: extras-manifest-dev-web
    namespace: default
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: http
    selector:
        app.kubernetes.io/instance: extras-manifest-dev
        app.kubernetes.io/name: web
    sessionAffinity: None
    type: ClusterIP
